Se agrego ruta de exploracion en todas las paginas mas adicion de links de pagina -error- para los iconos de favoritos, compras y usuario

--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -43,16 +43,23 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-corazon.png" alt="icono de corazon">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
+                            </a>
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-carrito.png" alt="icono de carro de compras">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
+                            </a>
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-user (1).png" alt="icono de usuario">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
+                            </a>
                         </div>
+
 
                     </div>
                 </div>
@@ -92,7 +99,8 @@
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a>
+                                </li>
                                 <li><a class="dropdown-item" href="/paginas/serum.html" target="_blank">Serum</a></li>
                                 <li><a class="dropdown-item" href="/paginas/brumas.html" target="_blank">Brumas</a></li>
                             </ul>
@@ -123,6 +131,14 @@
     </header>
 
     <main>
+
+        <!--ruta exploracion-->
+        <div class="ruta-exploracion">
+            <h1><a href="/index.html">Inicio</a> </h1>
+            <h2>></h2>
+            <h1>Labios</h1>
+        </div>
+
         <div class="flex-row">
             <!--Side menu vertical-->
             <article class="menu-vertical">
