--- a/paginas/error.html
+++ b/paginas/error.html
@@ -30,7 +30,8 @@
         <section class="header">
             <div class="cont-header">
                 <div class="logo-img">
-                    <a href="/index.html"><img src="../img/logo-beso.png" alt="logo de la pagina, beso y nombre." id="brand"></a>
+                    <a href="/index.html"><img src="../img/logo-beso.png" alt="logo de la pagina, beso y nombre."
+                            id="brand"></a>
                 </div>
 
                 <div id="search-bar">
@@ -46,16 +47,23 @@
                     <div class="contenedor-icon">
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-corazon.png" alt="icono de corazon">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
+                            </a>
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-carrito.png" alt="icono de carro de compras">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
+                            </a>
                         </div>
 
                         <div class="cont-icon">
-                            <img class="img-logos" src="../img/logo-user (1).png" alt="icono de usuario">
+                            <a href="paginas/error.html" target="_blank">
+                                <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
+                            </a>
                         </div>
+
 
                     </div>
                 </div>
@@ -74,29 +82,27 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                        href="/paginas/labios.html" target="_blank">Labios</a>
+                                <li><a class="dropdown-item" href="/paginas/labios.html" target="_blank">Labios</a>
                                 </li>
-                                <li><a class="dropdown-item"
-                                        href="/paginas/ojos.html" target="_blank">Ojos</a>
+                                <li><a class="dropdown-item" href="/paginas/ojos.html" target="_blank">Ojos</a>
                                 </li>
-                                <li><a class="dropdown-item"
-                                        href="/paginas/rostro.html" target="_blank">Rostro</a>
+                                <li><a class="dropdown-item" href="/paginas/rostro.html" target="_blank">Rostro</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a></li>
+                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a>
+                                </li>
                                 <li><a class="dropdown-item" href="/paginas/serum.html" target="_blank">Serum</a></li>
                                 <li><a class="dropdown-item" href="/paginas/brumas.html" target="_blank">Brumas</a></li>
                             </ul>
