--- a/paginas/limpieza.html
+++ b/paginas/limpieza.html
@@ -47,19 +47,19 @@
 
                         <div class="cont-icon">
                             <a href="paginas/error.html" target="_blank">
-                                <img class="img-logos" src="img/logo-corazon.png" alt="icono de corazon">
+                                <img class="img-logos" src="../img/logo-corazon.png" alt="icono de corazon">
                             </a>
                         </div>
 
                         <div class="cont-icon">
                             <a href="paginas/error.html" target="_blank">
-                                <img class="img-logos" src="img/logo-carrito.png" alt="icono de carro de compras">
+                                <img class="img-logos" src="../img/logo-carrito.png" alt="icono de carro de compras">
                             </a>
                         </div>
 
                         <div class="cont-icon">
                             <a href="paginas/error.html" target="_blank">
-                                <img class="img-logos" src="img/logo-user (1).png" alt="icono de usuario">
+                                <img class="img-logos" src="../img/logo-user (1).png" alt="icono de usuario">
                             </a>
                         </div>
 
