Se agrego ruta de exploracion en todas las paginas mas adicion de links de pagina -error- para los iconos de favoritos, compras y usuario

--- a/paginas/serum.html
+++ b/paginas/serum.html
@@ -40,21 +40,20 @@
                 <!--Inicia div iconos-->
                 <div class="iconos">
                     <div class="contenedor-icon">
-
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
+                            <a href="/paginas/error.html" target="_blank">
                                 <img class="img-logos" src="../img/logo-corazon.png" alt="icono de corazon">
                             </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
+                            <a href="/paginas/error.html" target="_blank">
                                 <img class="img-logos" src="../img/logo-carrito.png" alt="icono de carro de compras">
                             </a>
                         </div>
 
                         <div class="cont-icon">
-                            <a href="paginas/error.html" target="_blank">
+                            <a href="/paginas/error.html" target="_blank">
                                 <img class="img-logos" src="../img/logo-user (1).png" alt="icono de usuario">
                             </a>
                         </div>
