Se arreglo responsive de menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -73,57 +73,46 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
-
-            <div class="container-fluid" id="cont-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Maquillaje
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                        href="paginas/labios.html" target="_blank">Labios</a>
-                                </li>
-                                <li><a class="dropdown-item"
-                                        href="paginas/ojos.html" target="_blank">Ojos</a>
-                                </li>
-                                <li><a class="dropdown-item"
-                                        href="paginas/rostro.html" target="_blank">Rostro</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Cuidado facial
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="paginas/limpieza.html" target="_blank">Limpieza</a></li>
-                                <li><a class="dropdown-item" href="paginas/serum.html" target="_blank">Serum</a></li>
-                                <li><a class="dropdown-item" href="paginas/brumas.html" target="_blank">Brumas</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Marcas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Novedades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="paginas/error.html" target="_blank">Contacto</a>
-                        </li>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Maquillaje
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Ojos</a></li>
+                      <li><a class="dropdown-item" href="#">Labios</a></li>
+                      <li><a class="dropdown-item" href="#">Rostro</a></li>
                     </ul>
-                </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Cuidado facial
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Limpieza</a></li>
+                      <li><a class="dropdown-item" href="#">Serum</a></li>
+                      <li><a class="dropdown-item" href="#">Brumas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Marcas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Novedades</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
         <!--Ends nav-->
     </header>
 
@@ -426,7 +415,7 @@
             </article>
         </section>
 
-
+       
         <!--Footer-->
         <section class="caja-footer">
             <article class="box-footer" id="info-footer">
@@ -463,6 +452,7 @@
                 </div>
             </article>
         </section>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
