--- a/paginas/brumas.html
+++ b/paginas/brumas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Brumas</title>
+    <title>Brumas-Beauty store</title>
     <link rel="shortcut icon" href="../img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
     <link rel="stylesheet" href="../css/main.css">
@@ -66,56 +66,46 @@
         </section>
 
         <!--Inicia nav-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-body">
-
-            <div class="container-fluid" id="cont-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Maquillaje
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/labios.html" target="_blank">Labios</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/paginas/ojos.html" target="_blank">Ojos</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/paginas/rostro.html" target="_blank">Rostro</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Cuidado facial
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/paginas/limpieza.html" target="_blank">Limpieza</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/paginas/serum.html" target="_blank">Serum</a></li>
-                                <li><a class="dropdown-item" href="/paginas/brumas.html" target="_blank">Brumas</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/error.html" target="_blank">Marcas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/error.html" target="_blank">Novedades</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/paginas/error.html" target="_blank">Contacto</a>
-                        </li>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Maquillaje
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Ojos</a></li>
+                      <li><a class="dropdown-item" href="#">Labios</a></li>
+                      <li><a class="dropdown-item" href="#">Rostro</a></li>
                     </ul>
-                </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Cuidado facial
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Limpieza</a></li>
+                      <li><a class="dropdown-item" href="#">Serum</a></li>
+                      <li><a class="dropdown-item" href="#">Brumas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Marcas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Novedades</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
-
+          </nav>
         <!--Ends nav-->
 
         <!--Header contenido de pagina-->
@@ -157,14 +147,12 @@
                                 <li><a href="#">Protectores</a></li>
                             </ul>
                         </li>
-                        <li class="categoria"><a href="#">MARCA</a></li>
                         <li class="categoria"><a href="#">PRESENTACION</a>
                             <ul class="submenu">
                                 <li><a href="#">Liquido</a></li>
                                 <li><a href="#">Polvo</a></li>
                             </ul>
                         </li>
-                        <li class="categoria"><a href="#">PRECIO</a></li>
                     </ul>
                 </nav>
             </article>
