--- a/paginas/brumas.html
+++ b/paginas/brumas.html
@@ -78,29 +78,29 @@
                       Maquillaje
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Ojos</a></li>
-                      <li><a class="dropdown-item" href="#">Labios</a></li>
-                      <li><a class="dropdown-item" href="#">Rostro</a></li>
+                      <li><a class="dropdown-item" href="../paginas/ojos.html">Ojos</a></li>
+                      <li><a class="dropdown-item" href="../paginas/labios.html">Labios</a></li>
+                      <li><a class="dropdown-item" href="../paginas/rostro.html">Rostro</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Cuidado facial
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Limpieza</a></li>
-                      <li><a class="dropdown-item" href="#">Serum</a></li>
-                      <li><a class="dropdown-item" href="#">Brumas</a></li>
+                      <li><a class="dropdown-item" href="../paginas/limpieza.html">Limpieza</a></li>
+                      <li><a class="dropdown-item" href="../paginas/serum.html">Serum</a></li>
+                      <li><a class="dropdown-item" href="../paginas/brumas.html">Brumas</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Marcas</a>
+                    <a class="nav-link" href="../paginas/error.html">Marcas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Novedades</a>
+                    <a class="nav-link" href="../paginas/error.html">Novedades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="../paginas/error.html">Contacto</a>
                   </li>
                 </ul>
               </div>
