--- a/paginas/maquillaje.html
+++ b/paginas/maquillaje.html
@@ -55,7 +55,6 @@
 
                     </div>
                 </div>
-                <!--TERMINA DIV ICONOS-->
             </div>
             </div>
         </section>
@@ -120,15 +119,16 @@
         <!--Header contenido de pagina-->
         <section class="div-header">
             <article>
-                <div class="cortes-pagina">LABIOS</div>
+                <div class="cortes">MAQUILLAJE</div>
                 <div class="lineas"></div>
             </article>
         </section>
     </header>
 
     <main>
+
         <div class="flex-row">
-             <!--Side menu vertical-->
+        <!--Side menu vertical-->
         <article class="menu-vertical">
             <nav class="side-bar">
                 <ul class="list-side-bar">
@@ -171,21 +171,21 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="labial-nyx" src="../img/pag-maqullaje/nyx-labial-2.png"
-                                        alt="Labial liquido NYX">
+                                    <img id="mac-iluminador" src="../img/pag-maqullaje/mac-iluminador.png"
+                                        alt="rubor liquido MAC">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">NYX</h2>
-                                <h3 class="nombre-producto-producto">SMOOTH WHIP MATTE LIP CREAM</h3>
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">EXTRA DIMENSION SKINFINISH</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$2.005</h2>
-                                    <h3 class="cantidad-cuotas"></h3>
+                                    <h2 class="precio-producto">$8.500</h2>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $2.833</h3>
                                 </div>
 
                             </article>
@@ -200,20 +200,20 @@
                             <div class="image-content-producto">
 
                                 <div class="card-image-producto">
-                                    <img id="labial-nyx-2" src="../img/pag-maqullaje/nyx-labial.png"
-                                        alt="Labial liquido NYX">
+                                    <img id="mac-mascara" src="../img/pag-maqullaje/mac-mascara.png"
+                                        alt="mascara de pestañas MAC">
                                 </div>
 
                                 <div class="card-content-producto">
-                                    <h2 class="nombre-marca-producto">NYX</h2>
-                                    <h3 class="nombre-producto-producto">LABIAL LÍQUIDO MATE LIP LINGERIE XXL</h3>
+                                    <h2 class="nombre-marca-producto">MAC</h2>
+                                    <h3 class="nombre-producto-producto">M·A·CSTACK MASCARA</h3>
                                 </div>
                                 <hr class="separador">
 
                                 <article class="texto-descripcion">
                                     <div class="precio-producto-producto">
-                                        <h2 class="precio-producto">$2.353</h2>
-                                        <h3 class="cantidad-cuotas"></h3>
+                                        <h2 class="precio-producto">$5.800</h2>
+                                        <h3 class="cantidad-cuotas">3 cuotas de $1.933</h3>
                                     </div>
 
                                 </article>
@@ -228,7 +228,7 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="labial-mac" src="../img/pag-maqullaje/mac-labial.png" alt="labial MAC">
+                                    <img id="mac-labial" src="../img/pag-maqullaje/mac-labial.png" alt="labial MAC">
                                 </div>
                             </div>
 
@@ -241,7 +241,7 @@
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
                                     <h2 class="precio-producto">$4.563</h2>
-                                    <h3 class="cantidad-cuotas"></h3>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $1.521</h3>
                                 </div>
 
                             </article>
@@ -257,77 +257,78 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="gloss-maybelline" src="../img/pag-maqullaje/maybelline-gloss.png"
-                                        alt="Lip gloss Maybelline">
-                                </div>
-                            </div>
-
-                            <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAYBELLINE</h2>
-                                <h3 class="nombre-producto-producto">BRILLO LABIAL LIFTER <br> GLOSS LARGA DURACIÓN</h3>
-                            </div>
-                            <hr class="separador">
-
-                            <article class="texto-descripcion">
-                                <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$3.500</h2>
-                                    <h3 class="cantidad-cuotas"></h3>
-                                </div>
-
-                            </article>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grids-producto">
-                    <div class="slide-content-producto">
-                        <div class="card-producto">
-                            <div class="image-content-producto">
-                                <div class="card-image-producto">
-                                    <img id="lipglass" src="../img/pag-maqullaje/mac-labial-3.png" alt="Gloss MAC">
+                                    <img id="mac-mascara-2" src="../img/pag-maqullaje/mac-mascara-2.png"
+                                        alt="mascara de pestaña MAC">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
                                 <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">LIPGLASS</h3>
-                            </div>
-                            <hr class="separador">
-
-                            <article class="texto-descripcion">
-                                <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$4.480</h2>
-                                    <h3 class="cantidad-cuotas"></h3>
-                                </div>
-
-                            </article>
-
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grids-producto">
-                    <div class="slide-content-producto">
-                        <div class="card-producto">
-                            <div class="image-content-producto">
-                                <div class="card-image-producto">
-                                    <img id="labial-mac-2" src="../img/pag-maqullaje/mac-labial-4.png"
-                                        alt="Labial liquido MAC">
-                                </div>
-                            </div>
-
-                            <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">POWDER KISS LIQUID LIPCOLOUR</h3>
+                                <h3 class="nombre-producto-producto">MAGIC EXTENSION 5MM <br> FIBRE MASCARA</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
                                     <h2 class="precio-producto">$5.600</h2>
-                                    <h3 class="cantidad-cuotas"></h3>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $1.866</h3>
+                                </div>
+
+                            </article>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="mac-labial-2" src="../img/pag-maqullaje/mac-labial-2.png"
+                                        alt="Labial en barra MAC">
+                                </div>
+                            </div>
+
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">LOVE ME LIPSTICK</h3>
+                            </div>
+                            <hr class="separador">
+
+                            <article class="texto-descripcion">
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$3.630</h2>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $1.210</h3>
+                                </div>
+
+                            </article>
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="mac-corrector" src="../img/pag-maqullaje/mac-corrector.png"
+                                        alt="Corrector liquido MAC">
+                                </div>
+                            </div>
+
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">PRO LONGWEAR CONCEALER</h3>
+                            </div>
+                            <hr class="separador">
+
+                            <article class="texto-descripcion">
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.500</h2>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $2.166</h3>
                                 </div>
 
                             </article>
@@ -344,77 +345,77 @@
                         <div class="card-producto">
                             <div class="image-content-producto">
                                 <div class="card-image-producto">
-                                    <img id="labial-mac" src="../img/pag-maqullaje/mac-labial-5.png"
-                                        alt="Labial en barra MAC">
+                                    <img id="mac-polvo" src="../img/pag-maqullaje/mac-polvo.png"
+                                        alt="Polvo compacto MAC">
                                 </div>
                             </div>
 
                             <div class="card-content-producto">
                                 <h2 class="nombre-marca-producto">MAC</h2>
-                                <h3 class="nombre-producto-producto">POWDER KISS VELVET <br> BLUR SLIM STICK</h3>
+                                <h3 class="nombre-producto-producto">STUDIO FIX POWDER <br> PLUS FOUNDATION</h3>
                             </div>
                             <hr class="separador">
 
                             <article class="texto-descripcion">
                                 <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$5.600</h2>
+                                    <h2 class="precio-producto">$8.296</h2>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $2.765</h3>
+                                </div>
+
+                            </article>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="mac-rubor" src="../img/pag-maqullaje/mac-rubor.png"
+                                        alt="Rubor en polvo MAC">
+                                </div>
+                            </div>
+
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAC</h2>
+                                <h3 class="nombre-producto-producto">MINERALIZE BLUSH</h3>
+                            </div>
+                            <hr class="separador">
+
+                            <article class="texto-descripcion">
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$6.844</h2>
+                                    <h3 class="cantidad-cuotas">3 cuotas de $2.281</h3>
+                                </div>
+
+                            </article>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grids-producto">
+                    <div class="slide-content-producto">
+                        <div class="card-producto">
+                            <div class="image-content-producto">
+                                <div class="card-image-producto">
+                                    <img id="mascara-maybelline-waterproof" src="../img/pag-maqullaje/mascara-maybelline.png"
+                                        alt="Mascara de pestañas Total Temptation waterproof Maybelline">
+                                </div>
+                            </div>
+
+                            <div class="card-content-producto">
+                                <h2 class="nombre-marca-producto">MAYBELLINE</h2>
+                                <h3 class="nombre-producto-producto">TOTAL TEMPTATION MASCARA WATERPROOF</h3>
+                            </div>
+                            <hr class="separador">
+
+                            <article class="texto-descripcion">
+                                <div class="precio-producto-producto">
+                                    <h2 class="precio-producto">$4.780</h2>
                                     <h3 class="cantidad-cuotas"></h3>
-                                </div>
-
-                            </article>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grids-producto">
-                    <div class="slide-content-producto">
-                        <div class="card-producto">
-                            <div class="image-content-producto">
-                                <div class="card-image-producto">
-                                    <img id="labial-lancome" src="../img/pag-maqullaje/labial-lancome.png"
-                                        alt="Labial liquido LANCOME">
-                                </div>
-                            </div>
-
-                            <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">LANCOME</h2>
-                                <h3 class="nombre-producto-producto">L'ABSOLU ROUGE DRAMA INK</h3>
-                            </div>
-                            <hr class="separador">
-
-                            <article class="texto-descripcion">
-                                <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$12.490</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $4.163</h3>
-                                </div>
-
-                            </article>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grids-producto">
-                    <div class="slide-content-producto">
-                        <div class="card-producto">
-                            <div class="image-content-producto">
-                                <div class="card-image-producto">
-                                    <img id="labial-lancome" src="../img/pag-maqullaje/labial-lancome-2.png"
-                                        alt="Gloss LANCOME">
-                                </div>
-                            </div>
-
-                            <div class="card-content-producto">
-                                <h2 class="nombre-marca-producto">LANCOME</h2>
-                                <h3 class="nombre-producto-producto">L'ABSOLU GLOSS RÔSY PLUMP</h3>
-                            </div>
-                            <hr class="separador">
-
-                            <article class="texto-descripcion">
-                                <div class="precio-producto-producto">
-                                    <h2 class="precio-producto">$11.300</h2>
-                                    <h3 class="cantidad-cuotas">3 cuotas de $3.766</h3>
                                 </div>
 
                             </article>
@@ -424,7 +425,7 @@
                 </div>
             </article>
         </section>
-        </div>
+    </div>
     </main>
 
     <!--Pagination-->
