--- a/css/index.html
+++ b/css/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description"
-        content="Maquillaje y productos de cuidado importado y nacional, conseguilo todo en tu tienda online de confianza.  " />
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="Maquillaje, Cuidado, Belleza" />
+    <meta name="description" content="Maquillaje y productos de cuidado importado y nacional, conseguilo todo en tu tienda online de confianza.  "/>
+    <meta name="robots" content= "index, follow">
+    <meta name="keywords" content="Maquillaje, Cuidado, Belleza"/>
     <title>Beauty store</title>
     <link rel="shortcut icon" href="img/logo-beso.png" type="image/x-icon">
     <!--Link a mi CSS-->
@@ -76,16 +75,13 @@
         <!--Inicia nav-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
@@ -95,8 +91,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
@@ -126,8 +121,7 @@
         <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/juno-1.jpg" class="d-block w-100"
-                        alt="imagen con nombre de marca y balsamos labiales">
+                    <img src="img/juno-1.jpg" class="d-block w-100" alt="imagen con nombre de marca y balsamos labiales">
                 </div>
                 <div class="carousel-item">
                     <img src="img/juno-2.jpg" class="d-block w-100" alt="imagen con un texto acerca de nuestra tienda">
@@ -161,7 +155,7 @@
                         <img src="img/envio-png.png" alt="icono envio gratis" id="envio">
                     </div>
                     <div class="img-contenedor">
-                        <img src="img/metodos-png.png" alt="icono tarjetas de credito" id="metodos">
+                        <img src="img/metodos-png.png" alt="icono tarjetas de credito" id="metodos" >
                     </div>
                 </div>
 
@@ -213,7 +207,7 @@
 
                                 <div class="card-image">
                                     <img class="foto-producto" src="img/pag-maqullaje/polvo-givenchy.png"
-                                        alt="Set de polvos compactos Givenchy">
+                                        alt="Set de polvos compactos Givenchy" >
                                 </div>
                             </div>
 
@@ -241,8 +235,7 @@
                         <div class="card">
                             <div class="image-content">
                                 <div class="card-image">
-                                    <img class="foto-producto" src="img/pag-maqullaje/sombras-dior.png"
-                                        alt="paleta de sombras DIOR">
+                                    <img class="foto-producto" src="img/pag-maqullaje/sombras-dior.png" alt="paleta de sombras DIOR">
                                 </div>
                             </div>
 
