arreglo de tamaño cards de index, tamaño de fuente

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                                 <div class="descripcion">
                                     <h3 class="descripcion-producto">Su estuche mate y suave revela unos polvos
                                         voluptuosos quevisten la mirada con el maquillaje más couture.La textura en
-                                        polvo finay cremosa de las sombras de ojos está enriquecida por primera vez*
-                                        conextracto de flor de aciano.</h3>
+                                        polvo finay cremosa de las sombras de ojos está enriquecida por primera vez
+                                        con extracto de flor de aciano.</h3>
                                 </div>
                             </article>
 
