--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -437,11 +437,11 @@
                     <li class="page-item disabled">
                         <a class="page-link">Previous</a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="../paginas/error.html">1</a></li>
+                    <li class="page-item"><a class="page-link" href="../paginas/error.html">2</a></li>
+                    <li class="page-item"><a class="page-link" href="../paginas/error.html">3</a></li>
                     <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
+                        <a class="page-link" href="../paginas/error.html">Next</a>
                     </li>
                 </ul>
             </nav>
